include/flowi/core/memory_tracker.h

// @generated by api_gen - DO NOT EDIT. Regenerate with cargo regen.

#pragma once

#include <flowi/fl_api.h>
#include <stdbool.h>
#include <stdint.h>
#include <flowi/core/string.h>
#include <flowi/arena/arena.h>

#ifdef __cplusplus
extern "C" {
#endif

// Memory-tracking statistics snapshot: arena allocator usage across all threads
// plus the mimalloc allocation/free balance. Filled on demand by
// fl_memory_tracker_get_stats and read field-wise.
typedef struct FlMemoryStats {
    // Number of live arenas across all threads.
    uint32_t live_arena_count;
    // Total reserved capacity of all arenas, in bytes.
    uint64_t total_arena_capacity;
    // Total currently used memory across all arenas, in bytes.
    uint64_t total_arena_used;
    // Total peak memory usage across all arenas, in bytes.
    uint64_t total_arena_peak;
    // Current mimalloc memory (allocated - freed), in bytes.
    uint64_t mimalloc_current;
    // Total bytes allocated via mimalloc.
    uint64_t mimalloc_total_allocated;
    // Total bytes freed via mimalloc.
    uint64_t mimalloc_total_freed;
    // Number of mimalloc allocations.
    uint64_t mimalloc_alloc_count;
    // Number of mimalloc frees.
    uint64_t mimalloc_free_count;
} FlMemoryStats;

// Memory leak-detection and profiling surface. Call init/destroy to bracket the
// tracker's lifetime, then use the `dump_*` / `export_json_*` calls or get_stats to
// read a snapshot.
// Direct API - hand-written bodies.
// Initialize the memory-tracking system. Call early in application startup.
FL_API void fl_memory_tracker_init(void);
// Destroy the memory-tracking system. Call at application shutdown.
FL_API void fl_memory_tracker_destroy(void);
// Dump a memory snapshot as a text FlString allocated from arena.
FL_API FlString fl_memory_tracker_dump_string(FlArena* arena);
// Dump a memory snapshot to filepath in text format (overwriting). Returns true on success.
FL_API bool fl_memory_tracker_dump_to_file(FlString filepath);
// Export a memory snapshot as a JSON FlString allocated from arena.
FL_API FlString fl_memory_tracker_export_json_string(FlArena* arena);
// Export a memory snapshot to filepath in JSON format (overwriting). Returns true on success.
FL_API bool fl_memory_tracker_export_json_to_file(FlString filepath);
// Fill stats with the current memory statistics.
FL_API void fl_memory_tracker_get_stats(FlMemoryStats* stats);


#ifdef __cplusplus
}
#endif