rust/flowi_core_sys/src/generated/memory_tracker.rs

// @generated by api_gen - DO NOT EDIT. Regenerate with cargo regen.

/// Memory-tracking statistics snapshot: arena allocator usage across all threads
/// plus the mimalloc allocation/free balance. Filled on demand by
/// fl_memory_tracker_get_stats and read field-wise.
#[repr(C)]
#[derive(Copy, Clone, Debug)]
pub struct MemoryStats {
    /// Number of live arenas across all threads.
    pub live_arena_count: u32,
    /// Total reserved capacity of all arenas, in bytes.
    pub total_arena_capacity: u64,
    /// Total currently used memory across all arenas, in bytes.
    pub total_arena_used: u64,
    /// Total peak memory usage across all arenas, in bytes.
    pub total_arena_peak: u64,
    /// Current mimalloc memory (allocated - freed), in bytes.
    pub mimalloc_current: u64,
    /// Total bytes allocated via mimalloc.
    pub mimalloc_total_allocated: u64,
    /// Total bytes freed via mimalloc.
    pub mimalloc_total_freed: u64,
    /// Number of mimalloc allocations.
    pub mimalloc_alloc_count: u64,
    /// Number of mimalloc frees.
    pub mimalloc_free_count: u64,
}

const _: () = {
    assert!(core::mem::size_of::<MemoryStats>() == 72, "MemoryStats size drift");
    assert!(core::mem::align_of::<MemoryStats>() == 8, "MemoryStats align drift");
    assert!(core::mem::offset_of!(MemoryStats, live_arena_count) == 0, "MemoryStats.live_arena_count offset drift");
    assert!(core::mem::offset_of!(MemoryStats, total_arena_capacity) == 8, "MemoryStats.total_arena_capacity offset drift");
    assert!(core::mem::offset_of!(MemoryStats, total_arena_used) == 16, "MemoryStats.total_arena_used offset drift");
    assert!(core::mem::offset_of!(MemoryStats, total_arena_peak) == 24, "MemoryStats.total_arena_peak offset drift");
    assert!(core::mem::offset_of!(MemoryStats, mimalloc_current) == 32, "MemoryStats.mimalloc_current offset drift");
    assert!(core::mem::offset_of!(MemoryStats, mimalloc_total_allocated) == 40, "MemoryStats.mimalloc_total_allocated offset drift");
    assert!(core::mem::offset_of!(MemoryStats, mimalloc_total_freed) == 48, "MemoryStats.mimalloc_total_freed offset drift");
    assert!(core::mem::offset_of!(MemoryStats, mimalloc_alloc_count) == 56, "MemoryStats.mimalloc_alloc_count offset drift");
    assert!(core::mem::offset_of!(MemoryStats, mimalloc_free_count) == 64, "MemoryStats.mimalloc_free_count offset drift");
};

// Memory leak-detection and profiling surface. Call init/destroy to bracket the
// tracker's lifetime, then use the `dump_*` / `export_json_*` calls or get_stats to
// read a snapshot.
extern "C" {
    /// Initialize the memory-tracking system. Call early in application startup.
    pub fn fl_memory_tracker_init();
    /// Destroy the memory-tracking system. Call at application shutdown.
    pub fn fl_memory_tracker_destroy();
    /// Dump a memory snapshot as a text FlString allocated from arena.
    pub fn fl_memory_tracker_dump_string(arena: *mut crate::Arena) -> crate::RawStr;
    /// Dump a memory snapshot to filepath in text format (overwriting). Returns true on success.
    pub fn fl_memory_tracker_dump_to_file(filepath: crate::RawStr) -> bool;
    /// Export a memory snapshot as a JSON FlString allocated from arena.
    pub fn fl_memory_tracker_export_json_string(arena: *mut crate::Arena) -> crate::RawStr;
    /// Export a memory snapshot to filepath in JSON format (overwriting). Returns true on success.
    pub fn fl_memory_tracker_export_json_to_file(filepath: crate::RawStr) -> bool;
    /// Fill stats with the current memory statistics.
    pub fn fl_memory_tracker_get_stats(stats: *mut crate::MemoryStats);
}

